♻️ refactor: Optional 래핑